@@ -10,6 +10,7 @@ version 1.9.1, in progress
 - Reading gdt data files: don't stop if a denormalized tiny
   value is found: accept what the C library gives and ignore
   errno
+- Reinstate --basque start-up option for GUI program
 - Fix for printing of month names on time-series plots in
   locales with multi-byte characters
 - OS X: use the native Mac calculator app for gretl's
